--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ img {
 .proposition {
 	display: flex;
 	flex-wrap: wrap;
-	
+	gap: 30px;
 }
 .decor-text {
 	padding: 20px 24px;
@@ -538,19 +538,21 @@ img {
 }
 
 .proposition-decor {
-	/* margin-right: calc(100% -30px/ 3); */
-	margin-right: 30px;
-	margin-bottom: 30px;
+	
+	margin-right: calc(100% -  2 * 30px) / 3;
+	/*----------------------------------------------------------- Варіант Flex-box #2 --------------------------- */
+	/* margin-right: 30px;
+	margin-bottom: 30px; */
 	/* border: 1px solid #EEEEEE; */
 }
 
-.proposition-decor:nth-child(3n) {
+/* .proposition-decor:nth-child(3n) {
 	margin-right: 0;
 }
 
 .proposition-decor:nth-last-child(-n + 3) {
 	margin-bottom: 0;
-}
+} */
 
 
 /*------------------------------------- portfolio-title -----------------------------------*/
