--- a/css/styles.css
+++ b/css/styles.css
@@ -335,17 +335,21 @@ img {
 	display: flex;
 	
 }
-.first-item::before { 
+
+.first-list .first-item + .first-item {
+	margin-left: 30px;
+}
+
+/* ---------------------------------------::before - icon-------------------------- */
+/* .first-item::before { 
 	display: block;
 	content: "" ;
 	width: 270px;
 	height: 120px;
 	background-color: #F5F4FA ;
 	border-radius: 4px;
-	margin-bottom: 30px;
+	margin-bottom: 30px; 
 	
-}
-
 .icon-antenna::before {
 	background-image: url(../images/antenna.svg);
 	background-repeat: no-repeat;
@@ -372,8 +376,16 @@ img {
 }
 
 
-.first-list .first-item + .first-item {
-	margin-left: 30px;
+/*---------------------------------------SVG - icon-------------------------------  */
+
+.icon-antenna { 
+	width: 270px;
+	height: 120px;
+	display: inline-block;
+	background-color: #F5F4FA;
+	padding: 25px;
+	margin-bottom: 30px;
+	
 }
 
 
@@ -451,22 +463,39 @@ img {
 .team-decor { 
 	padding: 30px 0;
 }
-
+/* ------------------------------team icon -------------------------- */
 .icon-team { 
 	display:flex;
 	justify-content: center;
 	margin-top: 16px;
+	gap: 10px;
 	/* border: 1px solid blue; */
 
 }
-.icon-team .icon-instagram + .icon-instagram {
-	margin-left: 30px;
 
+
+.link-icon-team { 
+	display: flex
+	
+}
+.link-icon-team {
+	fill: #afb1b8;
+}
+
+
+.link-icon-team:hover,
+.link-icon-team:focus {
+	background-color: #2196f3;
+	border-radius: 50%;
+	fill: var(--main-backg-color);
+	
 }
 
 .icon-team-decor{ 
-	width: 20px;
-	height: 20px;
+	
+	padding: 12px;
+	width: 44px;
+	height: 44px;
 
 }
 /* --------------------------  Clients------------------------------ */
