--- a/css/styles.css
+++ b/css/styles.css
@@ -158,14 +158,21 @@ img {
 }
 
 /* --------------------------Icons nav------------------------ */
+.icon-phone:hover,
+.icon-mail:hover {
+	fill: var(--hover-color);
+}
+
 
 .icon-mail { 
+	fill: var(--main-secondary-color);
 	width: 16px;
 	height: 12px;
 	margin-right: 10px;
 }
 
 .icon-phone { 
+	fill: var(--main-secondary-color);
 	width: 10px;
 	height: 16px;
 	margin-right: 10px;
@@ -382,7 +389,7 @@ img {
 	width: 270px;
 	height: 120px;
 	display: inline-block;
-	background-color: #F5F4FA;
+	background-color: var(--secondary-section-color);
 	padding: 25px;
 	margin-bottom: 30px;
 	
@@ -465,9 +472,8 @@ img {
 }
 /* ------------------------------team icon -------------------------- */
 .icon-team { 
-	display:flex;
-	justify-content: center;
-	margin-top: 16px;
+	display:inline-flex;
+	margin: 16px 32px 0px 32px;
 	gap: 10px;
 	/* border: 1px solid blue; */
 
@@ -505,17 +511,28 @@ img {
 	padding: 0;
 	margin: 0;
 	gap: 30px;
+	
 
+}
+
+.link-clients .icon-company:hover,
+.link-clients .icon-company:focus {
+	fill: #2196f3;
 }
 .icon-clients {
 
 	border: 1px solid #AFB1B8;
 	border-radius: 4px;
 
+}
 
+.icon-clients:hover,
+.icon-clients:focus {
+	border-color: #2196f3;
 }
 
 .icon-company { 
+	fill: #afb1b8;
 	width:  170px;
 	height: 92px;
 	padding: 16px 32px;
@@ -541,7 +558,12 @@ img {
 	
 	background-color: var(--heder-backg-color);
 	padding: 60px 0;
+	
+}
 
+
+.footer-flex { 
+	display: flex;
 }
 
 .decor-address {
@@ -599,6 +621,37 @@ img {
 	color: var(--contact-footer);
 }	
 
+/* -------------------------------Footer section two----------------------- */
+
+.fotter-header {
+	padding-left: 11px;
+	margin-bottom: 20px;
+
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	
+	color: var(--main-backg-color);
+}
+
+.social { 
+	padding-top: 12px;
+	margin-left: 70px;
+	
+
+}
+
+.icon-footer{ 
+	display:flex;
+	
+	/* border: 1px solid blue; */
+}
+
+.white-icon-footer .icon-team-decor { 
+	fill: var(--main-backg-color);
+}
 
 
 /* ----------------------------------------------------PORTFOLIO -------------------------------------------------- */
@@ -633,6 +686,7 @@ img {
 	background-color: var(--hover-color);
 
 	color: var(--main-backg-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
@@ -725,5 +779,10 @@ img {
 /*------------------------------------ list proposition ---------------------------------------*/
 
 .portfolio-list {
+
 	text-decoration: none;
+}
+.proposition-decor:hover,
+.proposition-decor:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
