--- a/css/styles.css
+++ b/css/styles.css
@@ -472,7 +472,7 @@ img {
 	text-align: center;
 	font-size: 16px;
 	line-height: 1.19;
-	
+	margin-bottom: 16px;
 }
 
 .team-decor { 
@@ -480,21 +480,29 @@ img {
 }
 /* ------------------------------team icon -------------------------- */
 .icon-team { 
-	display:inline-flex;
-	margin: 16px 32px 0px 32px;
-	gap: 10px;
+	display: flex;
+	justify-content: center;
+	
+	/* gap: 10px; */
 	/* border: 1px solid blue; */
 
 }
-
-
-.link-icon-team {
-	display: flex;
-	color: #afb1b8;
-	padding: 12px;
-	border-radius: 50%;
+.item-clients:not(:last-child) {
+	margin-right: 10px;
 }
 
+.link-icon-team {
+
+	display: flex;
+
+	justify-content: center;
+	align-items: center;
+	color: #afb1b8;
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+
+}
 
 .link-icon-team:hover,
 .link-icon-team:focus {
@@ -522,7 +530,11 @@ img {
 
 .link-clients { 
 	display: flex;
-	padding:  16px 32px ;
+	justify-content: center;
+	align-items: center;
+	/* padding:  16px 32px ; */
+	width: 170px;
+	height: 92px;
 	border: 1px solid var(--client-color);
 	border-radius: 4px;
 	color: var(--client-color);
@@ -532,12 +544,9 @@ img {
 .link-clients:hover,
 .link-clients:focus {
 	color: var(--hover-color);
-}
-
-.link-clients:hover,
-.link-clients:focus {
 	border-color: var(--hover-color);
 }
+
 
 .icon-company { 
 	fill: currentColor;
@@ -634,13 +643,11 @@ img {
 /* -------------------------------Footer section two----------------------- */
 
 .fotter-header {
-	padding-left: 11px;
+	
 	margin-bottom: 20px;
 
 	font-weight: 700;
-	font-size: 14px;
-	line-height: 16px;
-	letter-spacing: 0.03em;
+	line-height: 1.14;
 	text-transform: uppercase;
 	
 	color: var(--main-backg-color);
